...
                    modifier = Modifier.clickable(onClick = { onBackButtonClicked() })
                )

                Box {
                    Icon(
                        painter = painterResource(R.drawable.outline_more),
                        contentDescription = "more버튼",
                        modifier = Modifier.clickable(onClick = { onMoreButtonClicked(true) })
                    )
                    DropdownMenu(
                        expanded = state.isDropDownMenuShow,
                        onDismissRequest = { onMoreButtonClicked(false) }
                    ) {
...
                                    painter = painterResource(R.drawable.bold_share),
                                    contentDescription = null,
                                    modifier = Modifier.size(20.dp),
                                    tint = AppColors.black
                                )
                            },
                            text = { Text("Share") },
                            onClick = {
                                onMoreButtonClicked(false)
                                onShareDialogRequest(true)
                            }
                        )
                        DropdownMenuItem(
...
                        Row(
                            modifier = Modifier.fillMaxWidth(),
                            horizontalArrangement = Arrangement.SpaceBetween,
                            verticalAlignment = Alignment.CenterVertically
                        ) {
                            Text(
                                text = "Recipe Link",
                                style = AppTextStyles.largeTextBold.copy(fontWeight = FontWeight.SemiBold),
                                modifier = Modifier.padding(top = 5.dp)
                            )
                            Icon(
                                imageVector = Icons.Default.Close,
                                contentDescription = "Close",
...
                                shape = RoundedCornerShape(9.dp),
                                colors = ButtonDefaults.buttonColors(containerColor = AppColors.primary100),
                                modifier = Modifier
                                    .height(43.dp)
                            ) {
                                Text(
                                    text = "Copy Link",
                                    style = AppTextStyles.smallerTextBold.copy(color = Color.White)
                                )
                            }
                        }
                    }
                }
...
