...
                                painter = painterResource(id = R.drawable.ic_serve),
                                contentDescription = "serve",
                                tint = AppColors.gray3
                            )
                            Spacer(modifier = Modifier.width(5.dp))
                            Text(
                                text = "1 serve",
                                style = AppTextStyles.smallerTextRegular.copy(
                                    color = AppColors.gray3
                                )
                            )
                        }

...
                modifier = Modifier.weight(1f),
                maxLines = 1,
                overflow = TextOverflow.Ellipsis
            )

            Text(
                text = "Copy Link",
                style = AppTextStyles.smallerTextRegular.copy(color = AppColors.primary100),
                modifier = Modifier
                    .clickable(
                        onClick = onCopyLinkClick,
                        indication = null,
                        interactionSource = remember { MutableInteractionSource() }
...
